crates/cli/tests/snapshots/plugins_test__plugins__builtins__supports_node_and_package_managers.snap
---
source: crates/cli/tests/plugins_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".proto/shims/registry.json\")).unwrap()"
---
{
  "node": {},
  "node-gyp": {
    "alt_exe": true,
    "context": "npm"
  },
  "npm": {},
  "npx": {
    "alt_exe": true,
    "context": "npm"
  },
  "pn": {
    "alt_exe": true,
    "context": "pnpm"
  },
  "pnpm": {},
  "pnpx": {
    "alt_exe": true,
    "context": "pnpm"
  },
  "pnx": {
    "alt_exe": true,
    "context": "pnpm"
  },
  "yarn": {},
  "yarnpkg": {
    "alt_exe": true,
    "context": "yarn"
  }
}
