crates/cli/tests/snapshots/plugins_test__plugins__builtins__supports_npm.snap
---
source: crates/cli/tests/plugins_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".proto/shims/registry.json\")).unwrap()"
---
{
  "node": {},
  "node-gyp": {
    "alt_bin": true,
    "parent": "npm"
  },
  "npm": {},
  "npx": {
    "alt_bin": true,
    "parent": "npm"
  }
}
