crates/cli/tests/snapshots/plugins_test__plugins__builtins__supports_pnpm.snap
---
source: crates/cli/tests/plugins_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".proto/shims/registry.json\")).unwrap()"
---
{
  "node": {},
  "pnpm": {},
  "pnpx": {
    "parent": "pnpm",
    "before_args": [
      "dlx"
    ]
  }
}
