crates/cli/tests/snapshots/plugins_test__plugins__builtins__supports_poetry.snap
---
source: crates/cli/tests/plugins_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".proto/shims/registry.json\")).unwrap()"
---
{
  "pip": {
    "before_args": [
      "-m",
      "pip"
    ],
    "parent": "python"
  },
  "poetry": {},
  "python": {}
}
